--- a/src/static/style.css
+++ b/src/static/style.css
@@ -4,6 +4,10 @@ details summary ~ * {
   animation: sweep .5s ease-in-out;
 }
 
+details summary {
+  cursor: pointer;
+}
+
 @keyframes sweep {
   0%    {opacity: 0; height: 0%}
   100%  {opacity: 1; height: 100%}
