--- a/src/static/style.css
+++ b/src/static/style.css
@@ -32,3 +32,19 @@ details summary {
     text-align: center;
   }
 }
+
+.main-hero svg:nth-child(1) {
+  max-width: 96%;
+}
+
+@media screen and (max-width: 769px) {
+  .main-hero svg:nth-child(1) {
+    margin-top: 4rem;
+    max-height: 300px;
+  }
+}
+
+#emoji {
+  max-width: 2rem;
+  vertical-align: middle;
+}
