--- a/src/include/FJB_README.html
+++ b/src/include/FJB_README.html
@@ -6,6 +6,8 @@
   <h1>Fast Javascript Bundler</h1>
 </p>
 
+<p><img alt="Compile and test" src="https://github.com/sebbekarlsson/fjb/workflows/Compile%20and%20test/badge.svg?branch=master" />
+<a href="https://fjbundler.com">https://fjbundler.com</a></p>
 <h2>What?</h2>
 <blockquote>
 <p>It is what it says it is.<br />
@@ -43,6 +45,7 @@ fjb index.js</code></p>
 <li>[x] JSX support</li>
 <li>[x] Importing JSON</li>
 <li>[x] Importing CSS</li>
+<li>[x] Importing &amp; transpiling SCSS</li>
 <li>[x] Automatic JSX format detection</li>
 <li>[x] <a href="PLUGINS.md">Plugin support</a></li>
 <li>[x] Removing dead code (Tree shaking)</li>
@@ -53,7 +56,6 @@ fjb index.js</code></p>
 <ul>
 <li>[ ] TypeScript support</li>
 <li>[ ] Lazy imports</li>
-<li>[ ] SCSS support</li>
 </ul>
 <h2>Example</h2>
 <blockquote>
