update with new benchmarks

--- a/src/include/FJB_README.html
+++ b/src/include/FJB_README.html
@@ -43,6 +43,7 @@ fjb index.js</code></p>
 <li>[x] Aliased imports</li>
 <li>[x] Wildcard imports</li>
 <li>[x] JSX support</li>
+<li>[x] TypeScript support (currently unstable and under development)</li>
 <li>[x] Importing JSON</li>
 <li>[x] Importing CSS</li>
 <li>[x] Importing &amp; transpiling SCSS</li>
@@ -54,7 +55,6 @@ fjb index.js</code></p>
 </ul>
 <h3>Planned Features</h3>
 <ul>
-<li>[ ] TypeScript support</li>
 <li>[ ] Lazy imports</li>
 </ul>
 <h2>Example</h2>
@@ -157,10 +157,9 @@ The reason why most bundlers today are slow, is because they are written in Java
 <blockquote>
 <p>If you find a bug, please report it here: <a href="https://github.com/sebbekarlsson/fjb/issues">https://github.com/sebbekarlsson/fjb/issues</a></p>
 </blockquote>
-<h3>When will TypeScript support be added?</h3>
+<h3>Does it support Typescript?</h3>
 <blockquote>
-<p>The process of implementing this will come soon,<br />
-it's important that we have a stable foundation first.</p>
+<p>Yes, but this feature is under development... so expect bugs.</p>
 </blockquote>
 <h3>What license is FJB under?</h3>
 <blockquote>
