--- a/src/include/FJB_README.html
+++ b/src/include/FJB_README.html
@@ -172,6 +172,11 @@ The reason why most bundlers today are slow, is because they are written in Java
 <blockquote>
 <p>Yes, but this feature is under development... so expect bugs.</p>
 </blockquote>
+<h3>How do I change the JSX format?</h3>
+<blockquote>
+<p>There's no need to worry about that, FJB knows if you're using React or not,
+and automatically takes care of it for you.</p>
+</blockquote>
 <h3>What license is FJB under?</h3>
 <blockquote>
 <p>GPL-3.0, <a href="LICENSE.md">LICENSE.md</a></p>
