--- a/src/include/FJB_README.html
+++ b/src/include/FJB_README.html
@@ -3,7 +3,7 @@
 </p>
 
 <p align='center' style='text-align: center;'>
-  <h1>Fast Javascript Bundler</h1>
+  <h1>Fast JavaScript Bundler</h1>
 </p>
 
 <p><img alt="Compile and test" src="https://github.com/sebbekarlsson/fjb/workflows/Compile%20and%20test/badge.svg?branch=master" />
@@ -19,7 +19,7 @@ with zero configuration needed. <em>(however, optional configuration will be sup
 <li>A bundler should not need excessive attention.</li>
 <li>A bundler should not get in the way of a developers workflow.</li>
 <li>A bundler should be fast.</li>
-<li>A bundler should not be written in Javascript / Node.</li>
+<li>A bundler should not be written in JavaScript / Node.</li>
 <li>Commonly used features among JS developers should be supported out of the box.</li>
 <li>The output of the bundler should work everywhere. (to an extent which is possible of course)</li>
 </ol>
@@ -159,16 +159,16 @@ I haven't tried it, but I would definitely think so.</p>
 <blockquote>
 <p>Have a look at this <a href="PLUGINS.md">guide</a></p>
 </blockquote>
-<h3>Will you add support for writing plugins in Javascript?</h3>
+<h3>Will you add support for writing plugins in JavaScript?</h3>
 <blockquote>
-<p>No. I don't think Javascript belongs in a bundler.<br />
-The reason why most bundlers today are slow, is because they are written in Javascript.</p>
+<p>No. I don't think JavaScript belongs in a bundler.<br />
+The reason why most bundlers today are slow, is because they are written in JavaScript.</p>
 </blockquote>
 <h3>What if I find a bug?</h3>
 <blockquote>
 <p>If you find a bug, please report it here: <a href="https://github.com/sebbekarlsson/fjb/issues">https://github.com/sebbekarlsson/fjb/issues</a></p>
 </blockquote>
-<h3>Does it support Typescript?</h3>
+<h3>Does it support TypeScript?</h3>
 <blockquote>
 <p>Yes, but this feature is under development... so expect bugs.</p>
 </blockquote>
